# portfolio

./: .gitignore  Cargo.toml  Config.toml  Dockerfile  Media.toml  README.md  Rocket.toml  content.toml  docker-compose.yml  index.handlebars  index.html  index.js  media  package-lock.json  package.json  routes.conf
metadata/: cellman.toml  flip-pixel.toml  fsae.toml  rendered_metadata.json  scada.toml  toml_to_json.sh
pages/: flip-pixel.md
public/: index.handlebars  index.html
public/pages/: .bms.md.swp  bms.md  cell-man.md
public/scripts/: main.js
public/stylesheets/: gallery.css  landing-page.css  main.css  prism.css  utils.css
scripts/: main.js  prism.js  utils.js
src/: config.rs  content.rs  content_parser.rs  error.rs  main.rs
stylesheets/: fonts.css  landing-page.css  main.css  utils.css
templates/: index.tera  macros.tera  project.tera
