[package]
name = "portfolio"
version = "0.1.0"
authors = ["Connor Winiarczyk <connorwiniarczyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
comrak = "0.8"

[dependencies.tera]
version = "1"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = true
features=["tera_templates"]
